Fix quotes in contact message

--- a/wisvch-connect/src/main/webapp/resources/js/locale/wisvch/messages.json
+++ b/wisvch-connect/src/main/webapp/resources/js/locale/wisvch/messages.json
@@ -17,7 +17,7 @@
     },
     "contact": {
       "title": "Contact",
-      "body": "\nCH Connect is provided as a service for members of W.I.S.V. 'Christiaan Huygens'.</p>\n<p><a class=\"btn\" href=\"mailto:beheer@ch.tudelft.nl?Subject=CH Connect\">Email &raquo;</a>"
+      "body": "\nCH Connect is provided as a service for members of W.I.S.V. ''Christiaan Huygens''.</p>\n<p><a class=\"btn\" href=\"mailto:beheer@ch.tudelft.nl?Subject=CH Connect\">Email &raquo;</a>"
     }
   }
 }
