--- a/wisvch-connect-overlay/src/main/webapp/resources/js/locale/en/messages.json
+++ b/wisvch-connect-overlay/src/main/webapp/resources/js/locale/en/messages.json
@@ -37,7 +37,7 @@
       "client-description-placeholder": "Type a description",
       "client-id": "Client ID",
       "client-id-help": "Unique identifier. If you leave this blank it will be automatically generated.",
-      "client-id-placeholder": "Type something",
+      "client-id-placeholder": "Client ID will be automatically generated",
       "client-name": "Client name",
       "client-name-help": "Human-readable application name",
       "client-name-placeholder": "Type something",
@@ -64,6 +64,8 @@
         "rsa1-5": "RSAES-PKCS1-V1_5"
       },
       "cryptography": "Crypto",
+      "device": "device",
+      "device-code-timeout": "Device Code Timeout",
       "display-secret": "Display/edit client secret:",
       "edit": "Edit Client",
       "generate-new-secret": "Generate a new client secret?",
@@ -158,6 +160,15 @@
         "ps384": "RSASSA-PSS using SHA-384 and MGF1 with SHA-384",
         "ps512": "RSASSA-PSS using SHA-512 and MGF1 with SHA-512"
       },
+      "software-id": "Software ID",
+      "software-id-placeholder": "software ID...",
+      "software-id-help": "Identifier for the software in this client",
+      "software-statement": "Software Statement",
+      "software-statement-placeholder": "eyj0...",
+      "software-statement-help": "A software statement is issued by a trusted third party and locks certain elements of a client's registration",
+      "software-version": "Software Version",
+      "software-version-placeholder": "1.0...",
+      "software-version-help": "Version of the software in this client",
       "subject-type": "Subject Type",
       "terms": "Terms of Service",
       "terms-help": "URL for the Terms of Service of this client, will be displayed to the user",
@@ -169,7 +180,13 @@
       "unknown": "(Unknown)",
       "user-info-crypto-algorithm": "User Info Endpoint Encryption Algorithm",
       "user-info-crypto-method": "User Info Endpoint Encryption Method",
-      "user-info-signing-algorithm": "User Info Endpoint Signing Algorithm"
+      "user-info-signing-algorithm": "User Info Endpoint Signing Algorithm",
+      "error": {
+        "consistency": "Consistency error",
+        "pairwise-sector": "Pairwise identifiers cannot be used with multiple redirect URIs unless a sector identifier URI is also registered.",
+        "jwk-set": "JWK set error",
+        "jwk-set-parse": "There was an error parsing the public key from the JSON Web Key set. Check the value and try again."
+      }
     },
     "client-table": {
       "allow-introspection-tooltip": "This client can perform token introspection",
@@ -185,7 +202,9 @@
         "policy": "policy",
         "redirect": "redirect uri",
         "scope": "scope",
-        "terms": "terms of service"
+        "terms": "terms of service",
+        "software-id": "software ID",
+        "software-version": "version"
       },
       "matched-search": "Matched search:",
       "new": "New Client",
@@ -297,9 +316,6 @@
       "icon": "Icon",
       "new": "New Scope",
       "select-icon": "Select an icon",
-      "structured": "is a structured scope",
-      "structured-help": "Is the scope structured with structured values like <code>base:extension</code>?",
-      "structured-param-help": "Human-readable description of the structured parameter",
       "subject-type": "Subject Type",
       "value": "Scope value",
       "value-help": "Single string with no spaces",
@@ -349,7 +365,14 @@
       "no-sites": "There are no whitelisted sites. Use the <strong>whitelist</strong> button on the client management page to create one."
     }
   },
-  "copyright": "Powered by <a href=\"https://github.com/WISVCH/connect/\">WISVCH Connect <span class=\"label\">{0}</span></a> <span class=\"pull-right\">&copy; 2016 W.I.S.V. ''Christiaan Huygens''</span>",
+  "blacklist": {
+    "text": "Blacklisted URIs cannot be used as redirect URIs by any registered clients, whether in the admin interface or in dynamic registration.",
+    "blacklist-uri-placeholder": "blacklist uri",
+    "add": "Add URI to blacklist",
+    "empty": "There are no blacklisted URIs on this server.",
+    "uri": "URI"
+  },
+  "copyright": "Powered by <a href=\"https://github.com/WISVCH/connect/\">WISVCH Connect <span class=\"label\">{0}</span></a> <span class=\"pull-right\">&copy; 2018 W.I.S.V. ''Christiaan Huygens''</span>",
   "about": {
     "title": "About",
     "body": "\nThis OpenID Connect service is built from the MITREid Connect Open Source project, from \n<a href=\"http://www.mitre.org/\">The MITRE Corporation</a> and the <a href=\"http://kit.mit.edu/\">MIT Kerberos and Internet Trust Consortium</a>.\n</p>\n<p>\nW.I.S.V. ''Christiaan Huygens'' has its own custom version on top of the stock MITREid Connect implementation. More information about the project can be found at \n<a href=\"http://github.com/WISVCH/connect/\">WISVCH Connect on GitHub</a>. \nThere, you can submit bug reports, give feedback, or even contribute code patches for additional features you''d like to see."
@@ -461,12 +484,53 @@
   },
   "error": {
     "title": "Error",
-    "header": "Error:",
-    "message": "There was an error processing your request. The server''s message was:"
+    "header": "Error",
+    "header-with-message": "Error: ",
+    "reload": "Additionally, it looks like you're not logged in. Reload the page to try again. You will likely lose any unsaved work.",
+    "reload-button": "Reload",
+    "message": "There was an error processing your request.",
+    "server-message": "The server said: "
   },
   "login": {
     "login_with_username_and_password": "Login with Username and Password",
+    "username": "Username",
+    "password": "Password",
+    "login-button": "Login",
     "error": "The system was unable to log you in. Please try again."
+  },
+  "device": {
+    "request_code": {
+      "title": "Enter Code",
+      "header": "Enter Code",
+      "description": "Enter the code displayed on your device into the box below and press submit",
+      "submit": "Submit"
+    },
+    "error": {
+      "noUserCode": "The code that you entered was not found.",
+      "expiredUserCode": "The code that you entered has expired. Return to your device and request a new code.",
+      "userCodeAlreadyApproved": "The code that you entered has already been used.",
+      "userCodeMismatch": "There was an error processing the code you entered. Try refreshing the page and returning to your device to request a new code.",
+      "error": "There was an error processing the code you entered. Return to your device adn request a new code."
+    },
+    "approve": {
+      "approved": "The device has been approved.",
+      "notApproved": "The device has not been approved."
+    }
+  },
+  "logout": {
+    "confirmation": {
+      "title": "Logout requested",
+      "header": "Logout Requested",
+      "requested": "Logout has been requested by ",
+      "explanation": "Do you wan to log out of the identity provider? This will not affect your session at any other systems.",
+      "submit": "Log Out",
+      "deny": "Stay Logged In"
+    },
+    "post": {
+      "title": "Log out",
+      "header": "Log Out",
+      "notLoggedOut": "You have not been logged out of the identity server. You may close this browser or log in again.",
+      "loggedOut": "You have been logged out of the identity server."
+    }
   }
-
 }
