--- a/src/main/webapp/resources/js/locale/en/wisvch.json
+++ b/src/main/webapp/resources/js/locale/en/wisvch.json
@@ -1,11 +1,11 @@
 {
   "about": {
-    "body": "\nThis OpenID Connect service is built from the MITREid Connect Open Source project, from \n<a href=\"http://www.mitre.org/\">The MITRE Corporation</a> and the <a href=\"http://kit.mit.edu/\">MIT Kerberos and Internet Trust Consortium</a>.\n</p>\n<p>\nW.I.S.V. ''Christiaan Huygens'' has its own custom version on top of the stock MITREid Connect implementation. More information about the project can be found at \n<a href=\"http://github.com/WISVCH/connect/\">WISVCH Connect on GitHub</a>. \nThere, you can submit bug reports, give feedback, or even contribute code patches for additional features you''d like to see."
+    "body": "\nThis OpenID Connect service is built from the MITREid Connect Open Source project, from \n<a href=\"https://www.mitre.org/\">The MITRE Corporation</a> and the <a href=\"https://kit.mit.edu/\">MIT Kerberos and Internet Trust Consortium</a>.\n</p>\n<p>\nW.I.S.V. ''Christiaan Huygens'' has its own custom version on top of the stock MITREid Connect implementation. More information about the project can be found at \n<a href=\"https://github.com/WISVCH/connect/\">CH Connect on GitHub</a>. \nThere, you can submit bug reports, give feedback, or even contribute code patches for additional features you''d like to see."
   },
   "contact": {
-    "body": "To report bugs with the WISVCH Connect software itself, use the \n<a href=\"https://github.com/WISVCH/connect/issues\">GitHub issue tracker</a>. \nFor problems relating to this server, contact <a href=\"mailto:beheer@ch.tudelft.nl?Subject=CH Connect\">CH Beheer</a>."
+    "body": "To report bugs with the CH Connect software itself, use the \n<a href=\"https://github.com/WISVCH/connect/issues\">GitHub issue tracker</a>. \nFor problems relating to this server, contact <a href=\"mailto:beheer@ch.tudelft.nl?Subject=CH Connect\">CH Beheer</a>."
   },
-  "copyright": "Powered by <a href=\"https://github.com/WISVCH/connect/\">WISVCH Connect <span class=\"label\">{0}</span></a> <span class=\"pull-right\">&copy; 2019 W.I.S.V. ''Christiaan Huygens''</span>",
+  "copyright": "Powered by <a href=\"https://github.com/WISVCH/connect/\">CH Connect <span class=\"label\">{0}</span></a> <span class=\"pull-right\">&copy; 2019 W.I.S.V. ''Christiaan Huygens''</span>",
   "home": {
     "about": {
       "body": "This OpenID Connect service is built from the MITREid Connect Open Source project, and is customised by W.I.S.V. ''Christiaan Huygens''."
